--- a/experiments/colab_experiment.ipynb
+++ b/experiments/colab_experiment.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "!git clone https://github.com/nico-bohlinger/RL-X.git && cd RL-X && pip install -e .[all]\n",
-    "!pip install \"torch>=2.1.2\" --index-url https://download.pytorch.org/whl/cu118\n",
+    "!pip install \"torch>=2.1.2\" --index-url https://download.pytorch.org/whl/cu118 --upgrade\n",
     "!pip install -U \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
    ]
   },
